--- a/app/src/main/res/layout/activity_halaman_daftar.xml
+++ b/app/src/main/res/layout/activity_halaman_daftar.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.codetairy.logintanpadatabase.HalamanDaftar">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="35dp"
+        android:layout_margin="55dp"
         android:orientation="vertical">
 
         <EditText
@@ -34,6 +28,13 @@
             android:hint="Alamat"
             android:inputType="textMultiLine"/>
 
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#2ecc71"
+            android:entries="@array/sp_jurusan"
+            android:padding="5dp" />
 
         <Button
             android:layout_width="wrap_content"
@@ -43,4 +44,3 @@
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
