--- a/app/src/main/res/layout/activity_halaman_tampil.xml
+++ b/app/src/main/res/layout/activity_halaman_tampil.xml
@@ -26,5 +26,12 @@
             android:layout_height="wrap_content"
             android:text=""/>
 
+        <TextView
+            android:id="@+id/txt_jurusanT"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""/>
+
     </LinearLayout>
 
